# rag-app

./: .gitignore  api.py  main.py  main_pipeline_setup.py  pyproject.toml  requirements.txt  test.txt
migrations/: 001_alter_entity_embeddings.sql  003_create_column_catalog.sql
rag-app-backup.git/: config  packed-refs
rag-app-backup.git/objects/pack/: pack-93beb99c04c871d9cf0e08164860eca97839aff5.idx  pack-93beb99c04c871d9cf0e08164860eca97839aff5.pack
src/: main.py  pipeline.py
src/bootstrap/: bootstrap.py
src/database/: base_retriever.py  db.py  llm.py  pg_retrieval.py  pg_vectorstore.py  sql_retrieval.py  sql_retriever.py  sql_store.py  vector_retrieval.py  vector_retriever.py  vector_store.py  vectorstore.py
src/database/column/: column_ingestor.py  column_retriever.py  column_store.py
src/database/entity/: entity_ingestor.py  entity_resolver.py  entity_retriever.py  entity_store.py
src/database/guidance/: guidance_ingestor.py  guidance_retriever.py  guidance_store.py
src/database/nl2sql/: nl2sql_engine.py
src/models/: document.py  guidance.py  retrieved_chunk.py  user.py
src/pipelines/: answer_pipeline.py  ingestion_pipeline.py  reranker_pipeline.py  retrieval_pipeline.py  scrape_ingestion_pipeline.py  sql_ingestion.py  vector_ingestion.py  vector_retrieval.py
src/protocols/: pipeline.py  retriever.py  store.py
src/schema/: generate_rules.py  hints_and_rules.py  join_rules.py  realisation_rules.py  schema.py  setup_schema.py
src/services/: extract_service.py  scrape_service.py  user_service.py
src/util/: count_tokens.py
(+19 files in other folders)
