[project]
name = "rbac-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.7",
    "docx2txt>=0.9",
    "faiss-cpu>=1.13.1",
    "google>=3.0.0",
    "google-genai>=1.56.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jq>=1.10.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-google-genai>=4.1.2",
    "langchain-groq>=1.1.1",
    "langchain-huggingface>=1.2.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.6",
    "langchain-postgres>=0.0.16",
    "langgraph>=1.0.5",
    "matplotlib>=3.10.8",
    "opencv-python>=4.12.0.88",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdfminer>=20191125",
    "pgvector>=0.3.6",
    "pillow>=12.0.0",
    "psycopg2>=2.9.11",
    "pymupdf>=1.26.7",
    "pypdf>=6.5.0",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.0",
    "tiktoken>=0.12.0",
    "unstructured>=0.18.21",
    "wikipedia>=1.4.0",
]
